# toggle-panel

./: AUTHORS  CMakeLists.txt  dev_create_release.sh  install.sh  plasma-applet-paneltoggle.desktop
po/: CMakeLists.txt  de.po  generate.sh  plasma-applet-paneltoggle.pot
src/: CMakeLists.txt  applet.cpp  applet.h
src/config/: appearanceconfig.cpp  appearanceconfig.h  config.cpp  config.h  configpage.cpp  configpage.h  generalconfig.cpp  generalconfig.h
src/ui/: appearanceconfig.ui  generalconfig.ui
